--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "ascii-art": "^2.5.0",
     "console.table": "^0.10.0",
+    "dotenv": "^8.2.0",
     "inquirer": "^8.0.0",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0"
   }
 }
